# tethys_portal_firo

./: .gitignore  .gitmodules  Dockerfile  README.md  dev.env  firo_portal.def  firo_portal2.def
custom_themes/tethysext-default_theme/: .gitignore  pyproject.toml
custom_themes/tethysext-default_theme/tethysext/default_theme/: ext.py
custom_themes/tethysext-default_theme/tethysext/default_theme/public/css/: content-extra.css  cw3e_scoped.css  footer-extra.css  home-extra.css  main.css  style.css?ver=20230328.css  styles.css
custom_themes/tethysext-default_theme/tethysext/default_theme/public/js/: main.js
custom_themes/tethysext-default_theme/tethysext/default_theme/public/wp-content/plugins/formidable/css/: formidableforms.css
custom_themes/tethysext-default_theme/tethysext/default_theme/public/wp-content/themes/twentysixteen/: style.css
custom_themes/tethysext-default_theme/tethysext/default_theme/public/wp-content/themes/twentysixteen-child/: style.css
custom_themes/tethysext-default_theme/tethysext/default_theme/public/wp-content/themes/twentysixteen/css/: blocks.css
custom_themes/tethysext-default_theme/tethysext/default_theme/templates/admin/: base_site.html
custom_themes/tethysext-default_theme/tethysext/default_theme/templates/default_theme/: apps_library.html  base.html  footer.html  footer_gen.html  header.html  header_gen.html  home.html  login.html  profile.html  register.html  user_settings.html
custom_themes/tethysext-default_theme/tethysext/default_theme/tests/: tests.py
dev/: docker-compose.yml  load-mods.conf  proxy-vhost.conf
(+69 files in other folders)
