[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tethysext-default_theme"
description =  "Theme for the FIRO portal"
license = {text = "MIT"}
keywords = []
authors = [
    {name = "Aquaveo", email = "gromero@aquaveo.com"},
]
classifiers = [
     "Environment :: Web Environment",
     "Framework :: Django",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT",
     "Operating System :: OS Independent",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.10",
     "Topic :: Internet :: WWW/HTTP",
     "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = ["version"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["tethysext*"]

[tool.setuptools.package-data]
"*" = [
    "*.js",
    "*.png",
    "*.gif",
    "*.jpg",
    "*.html",
    "*.css",
    "*.gltf",
    "*.json",
    "*.svg",
]